# python-project-lvl2

./: README.md  pyproject.toml  setup.cfg
gendiff/scripts/: gendiff.py
